kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  namespace: default
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - "momo-store-practicum.ru"
        - "grafana.momo-store-practicum.ru"
      secretName: momo-ssl-secret
  rules:
    - host: "momo-store-practicum.ru"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
    - host: "grafana.momo-store-practicum.ru"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
